Fix wrap issue in query part

--- a/src/components/SpectralLineOverlay/SpectralLineOverlayComponent.scss
+++ b/src/components/SpectralLineOverlay/SpectralLineOverlayComponent.scss
@@ -26,7 +26,7 @@
                 height: 30px;
                 display: flex;
                 flex-direction: row;
-                flex-wrap: wrap;
+                flex-wrap: nowrap;
                 justify-content: space-between;
                 margin: 0;
                 padding: 0 5px 0 5px;
